syntax = "proto2";

package net;

message Envelope {
  optional string message_id = 1;
  optional bytes payload = 2;
  optional uint64 txn_id = 3;
}
